tests/NormalTests/paczka1/small_fuzzy/96991854.err
Error in line 10: dM2QS A367 8,9
Error in line 14: dM2QS S238 61,4
